--- a/deployment/sandbox-v2/helm/charts/mock-abis/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/mock-abis/values.template.j2
@@ -25,8 +25,9 @@ services:
   mockabis:
     serviceName: {{ versions.services.mock.abis.keys()[0] }}
     dockerImage: {{ versions.services.mock.abis.values()[0] }}
-    containerPort: 8081
-    servicePort: 80
+    ports:
+      containerPort: 8081
+      servicePort: 80
     ingressPath: /v1/mock-abis
     healthUrl: /v1/mock-abis-service/actuator/health
     podconfig:
