--- a/deployment/sandbox-v2/helm/charts/packetmanager/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/packetmanager/values.template.j2
@@ -30,8 +30,10 @@ services:
   packet:
     serviceName: {{ versions.services.packetmanager.service.keys()[0] }}
     dockerImage: {{ versions.services.packetmanager.service.values()[0] }}
-    containerPort: 8093
-    servicePort: 80
+    ports:
+      containerPort: 8093
+      servicePort: 80
+      hazelcastPort: 5701
     ingressPath: /commons/v1/packetmanager
     healthUrl: /commons/v1/packetmanager/actuator/health
     podconfig:
