Added config map for pmp ui.

--- a/deployment/sandbox-v2/helm/charts/pms/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/pms/values.template.j2
@@ -48,4 +48,5 @@ services:
     containerPort: 8080
     servicePort: 80
     apiHost: {{ site.sandbox_public_url }}/v1/
+    configName: pmp-ui-config
     ingressPath: /pmp-ui
