--- a/deployment/sandbox-v2/helm/charts/dmzregproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/values.template.j2
@@ -5,6 +5,7 @@ springConfigLabel: {{ config_repo.version }}
 configServerUrl: {{ config_server.ingress_url }}
 storageClass:  manual
 exportLogs: enabled  # Let filebeat export the logs
+regprocJarsPath: {{ regproc_clamav_jar_path }}
 
 sitePublicUrl: {{ site.sandbox_public_url }}
 
