--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_index.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_index.yml.j2
@@ -22,7 +22,9 @@
     <p>
       <a href="https://{{sandbox_domain_name}}/registration-client/{{versions.services.registration_client.version}}/reg-client.zip">Registration Client Zip</a>
     </p>
-
+    <p>
+      <a href="https://{{sandbox_domain_name}}/registration-client/{{versions.services.registration_client.version}}/registration-test-utility.zip">Registration Client Test Utility Zip</a>
+    </p>
   <h2>IAM</h2>
     <p>
       <a href="https://{{sandbox_domain_name}}/keycloak/auth/">Keycloak</a>
