Added missing property for websub.

--- a/deployment/sandbox-v2/helm/charts/websub/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/websub/values.template.j2
@@ -27,4 +27,4 @@ hub:
   hub_auth_base_url: "{{site.sandbox_public_url}}/v1/authmanager"
   hub_auth_validate_token_url: "/authorize/admin/validateToken"
   hub_auth_filter_disable: "'true'"
-
+  hub_config_file_url_env: "http://mz.ingress:30080/config/*/mz/develop/websub.conf"
