updated to pull mosip 1.2.0-rc1 keycloak

--- a/deployment/sandbox-v2/helm/charts/keycloak/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/keycloak/values.template.j2
@@ -1,6 +1,6 @@
 name: keycloak
-dockerImage: mosipqa/mosip-keycloak
-dockerTag: develop
+dockerImage: mosipid/mosip-keycloak
+dockerTag: 1.2.0-rc1
 keycloakUser: {{ keycloak.user }}
 keycloakPassword: '' # To be passed directly with helm command
 domain: {{ sandbox_domain_name }}
