updated the artifactory URL for dmzregproc

--- a/deployment/sandbox-v2/helm/charts/dmzregproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/values.template.j2
@@ -16,7 +16,7 @@ probe:
 ingress:
    namespace: default
 
-artifactoryUrl: {{ artifactory_url }} 
+artifactoryUrl: 'http://mz.ingress:30080/' 
 iamAdapterUrl: {{ iam_adapter_regproc_ext_url }}
 
 isGlowroot: {{ is_glowroot }} 
