[MOSIP-16793] resolved the merge conflicts and ports mapping issue

--- a/deployment/sandbox-v2/helm/charts/pms/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/pms/values.template.j2
@@ -61,4 +61,5 @@ services:
     apiHost: {{ site.sandbox_public_url }}
     configName: pmp-ui-config
     ingressPath: /pmp-ui
+    podconfig:
       {{ podconfig.pms.policy | to_nice_yaml(indent=6) | indent(6) }}
