[DSD-254] added env variable for passing the i18n bundle zip

--- a/deployment/sandbox-v2/helm/charts/prereg/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/prereg/values.template.j2
@@ -18,6 +18,7 @@ iamAdapterUrl: {{ iam_adapter_url }}
 sitePublicUrl: {{ site.sandbox_public_url }}
 imagePullPolicy: Always 
 isGlowroot: {{ is_glowroot }}
+preregistration_i18n_bundle_url: http://artifactory-service/artifactory/libs-release-local/i18n/pre-registration-i18n-bundle.zip
 exportLogs: enabled  # Let filebeat export the logs
 
 dockerHub:
