updated mosip infra

--- a/deployment/sandbox-v2/helm/charts/pms/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/pms/values.template.j2
@@ -58,7 +58,7 @@ services:
     ports:
       containerPort: 8080
       servicePort: 80
-    apiHost: {{ site.sandbox_public_url }}
+    apiHost: {{ site.sandbox_public_url }}/
     configName: pmp-ui-config
     ingressPath: /pmp-ui
     podconfig:
