--- a/deployment/sandbox-v2/helm/charts/websub/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/websub/values.template.j2
@@ -17,4 +17,4 @@ domain: {{ sandbox_domain_name }}
 
 hub:
   port: 9191
-  hub_config_file_url_env: "http://mz.ingress:30080/config/*/dmz/{{ config_repo.version }}/websub.conf"
+  hub_config_file_url_env: "http://mz.ingress:30080/config/*/mz/{{ config_repo.version }}/websub.conf"
