--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -143,13 +143,10 @@ http {
            proxy_pass {{clusters.mz.ingress.base_url}}/v1/auditmanager/;
         }
    
-        location /idauthentication/v1/auth/ {
+        location /idauthentication/v1/ {
            proxy_pass {{clusters.mz.ingress.base_url}}/idauthentication/v1/auth/;
         }
 
-        location /idauthentication/v1/kyc/ {
-           proxy_pass {{clusters.mz.ingress.base_url}}/idauthentication/v1/kyc/;
-        }
 
         location /idauthentication/v1/otp/ {
            proxy_pass {{clusters.mz.ingress.base_url}}/idauthentication/v1/otp/;
