--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -142,11 +142,14 @@ http {
         location /v1/auditmanager/ {
            proxy_pass {{clusters.mz.ingress.base_url}}/v1/auditmanager/;
         }
-   
-        location /idauthentication/v1/ {
+
+        location /idauthentication/v1/auth/ {
            proxy_pass {{clusters.mz.ingress.base_url}}/idauthentication/v1/auth/;
         }
 
+        location /idauthentication/v1/kyc/ {
+           proxy_pass {{clusters.mz.ingress.base_url}}/idauthentication/v1/kyc/;
+        }
 
         location /idauthentication/v1/otp/ {
            proxy_pass {{clusters.mz.ingress.base_url}}/idauthentication/v1/otp/;
@@ -310,9 +313,9 @@ http {
            proxy_pass {{clusters.mz.ingress.base_url}}/v1/print/;
         }
 
-        location /websub/ {
-           proxy_pass {{clusters.dmz.ingress.base_url}}/websub/;
-        }
+        location /hub/ {
+           proxy_pass http://dmzworker0.sb:30080/hub/;
+         }
 
         location /v1/mock-abis-service/ {
            proxy_pass http://mzworker0.sb:30080/v1/mock-abis-service/;
@@ -330,7 +333,6 @@ http {
             location = /50x.html {
         }
     }
-
 }
 
 stream {
