updated nginx hub path

--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -314,7 +314,7 @@ http {
         }
 
         location /hub/ {
-           proxy_pass http://dmzworker0.sb:30080/hub/;
+           proxy_pass {{clusters.dmz.ingress.base_url}}/hub/;
          }
 
         location /v1/mock-abis-service/ {
