remove / in apiHost in /prereg/values.template.j2

--- a/deployment/sandbox-v2/helm/charts/prereg/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/prereg/values.template.j2
@@ -83,7 +83,7 @@ services:
       containerPort: 8080
       servicePort: 80
     configName: prereg-ui-config # ConfigMap name
-    apiHost: https://{{ sandbox_domain_name }}/
+    apiHost: https://{{ sandbox_domain_name }}
     ingressPath: /pre-registration-ui
     podconfig:
       {{ podconfig.prereg.ui | to_nice_yaml(indent=6) | indent(6) }}
