[MOSIP-17529] added changes for adding mock abis p12 key

--- a/deployment/sandbox-v2/helm/charts/mock-abis/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/mock-abis/values.template.j2
@@ -25,7 +25,7 @@ dockerHub:
 pv:
   name: abis-key
   server: console.sb
-  path: {{clusters.mz.mock_abis.nfs_path}}
+  path: {{mock_abis.nfs_path}}
   size: 4Gi
 
 pvc:
