[ MOSIP-17772 ] changed docker image tag

--- a/deployment/sandbox-v2/helm/charts/minio/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/minio/values.template.j2
@@ -14,7 +14,7 @@ clusterDomain: cluster.local
 ##
 image:
   repository: minio/minio
-  tag: latest
+  tag: RELEASE.2021-03-04T00-53-13Z
   pullPolicy: IfNotPresent
 
 ## Set default image, imageTag, and imagePullPolicy for the `mc` (the minio
