--- a/deployment/sandbox-v2/helm/charts/prereg/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/prereg/values.template.j2
@@ -69,6 +69,16 @@ services:
     healthUrl: /preregistration/v1/actuator/health
     podconfig:
       {{ podconfig.prereg.datasync | to_nice_yaml(indent=6) | indent(6) }}
+
+  captcha:
+    serviceName: {{ versions.services.prereg.captcha.keys()[0] }}
+    dockerImage: {{ versions.services.prereg.captcha.values()[0] }}
+    ports:
+      containerPort: 9089
+      servicePort: 80
+    ingressPath: /preregistration/v1/captcha
+    healthUrl: /preregistration/v1/captcha/actuator/health
+
   ui:
     serviceName: {{ versions.services.prereg.ui.keys()[0] }} 
     dockerImage: {{ versions.services.prereg.ui.values()[0] }}
