[DSD-479] updated biosdk path in nginx.conf

--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -320,8 +320,8 @@ http {
            proxy_pass {{clusters.mz.ingress.base_url}}/v1/datashare/;
         }
 
-        location /v1/biosdk-service/ {
-           proxy_pass {{clusters.mz.ingress.base_url}}/v1/biosdk-service/;
+        location /biosdk-service/ {
+           proxy_pass {{clusters.mz.ingress.base_url}}/biosdk-service/;
         }
 
         location /v1/print/ {
