Updated latest configuration changes for activeMQ

--- a/deployment/sandbox-v2/helm/charts/activemq/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/activemq/values.template.j2
@@ -24,10 +24,10 @@ sc:
   name: ""
 pv:
   name: activemq
-  size: 500Mi  
+  size: 200Gi  
 pvc:
   name: activemq
-  size: 500Mi 
+  size: 200Gi 
 
 mountPath: /data/activemq  # path inside docker
 
